--- a/Prevu.Synoptics.V4659_Steinbais/L1/Pages/L1_P530.xaml
+++ b/Prevu.Synoptics.V4659_Steinbais/L1/Pages/L1_P530.xaml
@@ -218,7 +218,7 @@
         <Labels:DeviceLabel ComponentName="L1+812-01-MA1" Canvas.Left="1264" Canvas.Top="414" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel ComponentName="L1+846-01-MA1" Canvas.Left="1346" Canvas.Top="544" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel ComponentName="L1+810-43-WT1" Canvas.Left="1142" Canvas.Top="218" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="L1+846-71-ECS2" Canvas.Left="1207" Canvas.Top="696" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:DeviceLabel ComponentName="L1+846-71-ECS3" Canvas.Left="1321" Canvas.Top="695" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:DeviceLabel ComponentName="L1+846-71-ECS3" Canvas.Left="1264" Canvas.Top="694" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:DeviceLabel ComponentName="L1+482-61-LS1" Canvas.Left="128" Canvas.Top="193" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
