--- a/Prevu.Synoptics.V4659_Steinbais/L2/Pages/L2_P530.xaml
+++ b/Prevu.Synoptics.V4659_Steinbais/L2/Pages/L2_P530.xaml
@@ -215,9 +215,9 @@
         <Labels:DeviceLabel Canvas.Top="660" Canvas.Left="857" ComponentName="L2+534-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="L2+812-01-MA1" Canvas.Left="1264" Canvas.Top="414" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel ComponentName="L2+846-01-MA1" Canvas.Left="1346" Canvas.Top="544" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:DeviceLabel ComponentName="L2+846-71-ECS2" Canvas.Left="1207" Canvas.Top="696" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:DeviceLabel ComponentName="L2+846-71-ECS3" Canvas.Left="1321" Canvas.Top="695" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:DeviceLabel ComponentName="L2+846-71-ECS3" Canvas.Left="1264" Canvas.Top="694" HorizontalAlignment="Left" VerticalAlignment="Top" />
         <Labels:DetailsLabel ComponentName="L2+810-VIEW" DetailsPageName="L2_D810" Canvas.Left="1145" Canvas.Top="177" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel ComponentName="L2+810-SILO" Canvas.Left="1234" Canvas.Top="238" HorizontalAlignment="Left" VerticalAlignment="Top" />
+        <Labels:DeviceLabel ComponentName="L2+482-61-LS1" Canvas.Left="128" Canvas.Top="193" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
