--- a/Prevu.Synoptics.V4896_CPR/Pages/P460.xaml
+++ b/Prevu.Synoptics.V4896_CPR/Pages/P460.xaml
@@ -353,8 +353,9 @@
         <Labels:DeviceLabel ComponentName="451-22-CV1" Canvas.Left="1148" Canvas.Top="8" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:DeviceLabel ComponentName="451-23-CV1" Canvas.Left="1148" Canvas.Top="156" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:DeviceLabel ComponentName="451-71-ECS2" Canvas.Left="15" Canvas.Top="182" HorizontalAlignment="Left" VerticalAlignment="Top" />
-        <Labels:DeviceLabel ComponentName="451-71-ECS2" Canvas.Left="15" Canvas.Top="252" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:DeviceLabel ComponentName="451-71-ECS3" Canvas.Left="15" Canvas.Top="252" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:DeviceLabel ComponentName="456-42-WT1" Canvas.Left="558" Canvas.Top="159" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="457-21-CV1" Canvas.Left="630" Canvas.Top="386" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="451-71-ECS4" Canvas.Left="1415" Canvas.Top="127" HorizontalAlignment="Left" VerticalAlignment="Top" />
     </Canvas>
 </UserControl>
