--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/OverallView.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/OverallView.xaml
@@ -108,7 +108,7 @@
         </Labels:Pipe>
         <Labels:Pipe Canvas.Left="6252" Canvas.Top="3320" PipeHeight="Medium" Width="146" StatusComponent="872-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Canvas.Left="4303" Canvas.Top="720" Width="292" Color="Water" StatusComponent="282-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top" Height="6"/>
-        <Labels:Pipe Canvas.Left="2750" Canvas.Top="1738" Width="308" Color="Water" StatusComponent="232-01-MA1" Height="6" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5">
+        <Labels:Pipe Canvas.Left="2935" Canvas.Top="1777" Width="384" Color="Water" StatusComponent="236-01-MA1" Height="6" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -119,7 +119,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Canvas.Left="4200" Canvas.Top="2325" Width="415" Color="Water" StatusComponent="282-06-MA1" Height="6" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Canvas.Left="4947" Canvas.Top="1063" Width="91" Color="Water" StatusComponent="232-01-MA1" Height="6" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Canvas.Left="5072" Canvas.Top="1144" Width="91" Color="Water" StatusComponent="236-01-MA1" Height="6" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:Pipe Canvas.Left="3539" Canvas.Top="1485" Width="1532" Color="Water" StatusComponent="282-01-MA1" Height="6" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -141,7 +141,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Canvas.Left="4226" Canvas.Top="2249" Width="81" Color="Water" StatusComponent="282-01-MA1" Height="6" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Canvas.Left="4772" Canvas.Top="1324" Width="528" Color="Water" StatusComponent="232-01-MA1" Height="6" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Canvas.Left="4938" Canvas.Top="1365" Width="446" Color="Water" StatusComponent="236-01-MA1" Height="6" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -151,9 +151,9 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="2902" Canvas.Top="1586" Width="1392" Color="Water" StatusComponent="232-01-MA1" Height="6" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Canvas.Left="4315" Canvas.Top="1576" Width="287" Color="Water" StatusComponent="232-01-MA1" Height="26" HorizontalAlignment="Left" VerticalAlignment="Center" Icon="Left"/>
-        <Labels:Pipe Canvas.Left="4624" Canvas.Top="1586" Width="414" Color="Water" StatusComponent="232-01-MA1" Height="6" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="3125" Canvas.Top="1586" Width="1169" Color="Water" StatusComponent="236-01-MA1" Height="6" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="4315" Canvas.Top="1576" Width="287" Color="Water" StatusComponent="236-01-MA1" Height="26" HorizontalAlignment="Left" VerticalAlignment="Center" Icon="Left"/>
+        <Labels:Pipe Canvas.Left="4624" Canvas.Top="1586" Width="539" Color="Water" StatusComponent="236-01-MA1" Height="6" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Canvas.Left="1108" Canvas.Top="2685" Width="3207" Color="Water" StatusComponent="282-04-MA1" Height="25" HorizontalAlignment="Center" VerticalAlignment="Top" Icon="Left"/>
         <Labels:Pipe Canvas.Left="313" Canvas.Top="1900" Width="1594" Color="Water" StatusComponent="282-04-MA1" Height="6" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
@@ -177,8 +177,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="2914" Canvas.Top="1801" Width="455" Color="Water" StatusComponent="450-02-MA1" Height="6" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Canvas.Left="1123" Canvas.Top="1793" Width="1771" Color="Water" StatusComponent="450-02-MA1" Height="22" HorizontalAlignment="Left" VerticalAlignment="Center" Icon="Right"/>
+        <Labels:Pipe Canvas.Left="3135" Canvas.Top="1801" Width="234" Color="Water" StatusComponent="450-02-MA1" Height="6" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="1123" Canvas.Top="1793" Width="1995" Color="Water" StatusComponent="450-02-MA1" Height="22" HorizontalAlignment="Center" VerticalAlignment="Center" Icon="Right"/>
         <Labels:Pipe Canvas.Left="755" Canvas.Top="1801" Width="341" Color="Water" StatusComponent="450-02-MA1" Height="6" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Canvas.Left="-193" Canvas.Top="2749" Width="1900" Color="Water" StatusComponent="450-02-MA1" Height="6" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
