--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/Pages/P020.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/Pages/P020.xaml
@@ -191,7 +191,7 @@
         </Machines:CV_Valve>
         <Machines:V01_SB_Sfaldaballe Canvas.Left="226" Canvas.Top="488" Height="166" Width="167" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:Buffer_belt HorizontalAlignment="Center" VerticalAlignment="Top" Height="70" Width="192" Canvas.Left="88" Canvas.Top="268"/>
-        <Machines:Radar HorizontalAlignment="Left" VerticalAlignment="Top" Height="36" Width="31" Canvas.Left="263" Canvas.Top="447"/>
+        <Machines:Radar HorizontalAlignment="Left" VerticalAlignment="Top" Height="36" Width="31" Canvas.Left="234" Canvas.Top="466"/>
         <Machines:Waste Height="46" Width="44" Canvas.Left="812" Canvas.Top="466" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:Waste Height="46" Width="44" Canvas.Left="904" Canvas.Top="466" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:CV_Valve RenderTransformOrigin="0.5,0.5" Height="48" Width="56" Canvas.Left="1286" Canvas.Top="499" HorizontalAlignment="Center" VerticalAlignment="Top">
@@ -216,12 +216,12 @@
         <Machines:Manual_selection Height="78" Width="42" Canvas.Left="1042" Canvas.Top="349" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="032-01-MA1" JumpToLabel="050-01-MA1" Canvas.Left="1403" Canvas.Top="679"/>
         <Labels:JumpLabel JumpFromLabel="032-01-MA1" JumpToLabel="180-01-MA1" Canvas.Left="1202" Canvas.Top="351" HorizontalAlignment="Left" VerticalAlignment="Center" Direction="Left"/>
-        <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="020-HYD" DetailsPageName="D020" Canvas.Left="401" Canvas.Top="598"/>
+        <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="020-HYD" DetailsPageName="D020" Canvas.Left="232" Canvas.Top="663"/>
         <Labels:DetailsLabel ComponentName="018-LUB" DetailsPageName="D018" Canvas.Left="152" Canvas.Top="148" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DetailsLabel ComponentName="032-LUB" DetailsPageName="D032" Canvas.Left="1334" Canvas.Top="497" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="018-01-MA1" Canvas.Left="265" Canvas.Top="213"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="020-41-LT1" Canvas.Left="160" Canvas.Top="423"/>
-        <Labels:DeviceLabel ComponentName="020-DEBALER" Canvas.Left="264" Canvas.Top="663" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="020-41-LT1" Canvas.Left="131" Canvas.Top="442"/>
+        <Labels:DeviceLabel ComponentName="020-DEBALER" Canvas.Left="297" Canvas.Top="663" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel ComponentName="032-01-MA1" Canvas.Left="1188" Canvas.Top="647" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="032-41-LT1" Canvas.Left="1174" Canvas.Top="511" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="021-01-MA1" Canvas.Left="504" Canvas.Top="205" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -230,6 +230,6 @@
         <Labels:DeviceLabel ComponentName="030-01-MA1" Canvas.Left="834" Canvas.Top="351" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="025-01-MA1" Canvas.Left="588" Canvas.Top="24" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="030-01-YA1" Canvas.Left="707" Canvas.Top="440" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="020-01-YA1" Canvas.Left="464" Canvas.Top="598" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.511,0.55"/>
+        <Labels:DeviceLabel ComponentName="020-01-YA1" Canvas.Left="261" Canvas.Top="725" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.511,0.55"/>
     </Canvas>
 </UserControl>
