--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/Pages/P282.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/Pages/P282.xaml
@@ -18,18 +18,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="70" StatusComponent="232-01-MA1" Color="Water" Canvas.Left="181" Canvas.Top="94" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="64" StatusComponent="232-01-MA1" Color="Water" Canvas.Left="217" Canvas.Top="125" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="196" StatusComponent="236-01-MA1" Color="Water" Canvas.Left="275" Canvas.Top="174" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="89" StatusComponent="236-01-MA1" Color="Water" Canvas.Left="382" Canvas.Top="174" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="172" StatusComponent="282-21-CV1" Canvas.Left="1043" Canvas.Top="289"/>
         <Labels:Pipe Color="Water" Width="135" StatusComponent="282-21-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="977" Canvas.Top="354" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
@@ -156,8 +145,6 @@
         <Machines:Waste HorizontalAlignment="Left" VerticalAlignment="Center" Height="46" Width="44" Canvas.Left="349" Canvas.Top="339"/>
         <Machines:WaterPump Height="46" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1211" Canvas.Top="504" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Machines:WaterPump Height="44" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1211" Canvas.Top="430" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Machines:VRC_WaterCollectingTank Height="78" Width="93" Canvas.Left="201" Canvas.Top="139" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:WaterPump Height="45" Width="45" RenderTransformOrigin="0.5,0.5" Color="Water" BorderBrush="Black" Canvas.Left="225" Canvas.Top="154" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_RTF_Microfilter Canvas.Left="448" Canvas.Top="489" Height="130" Width="144" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_SCW_Screw_wHopper Canvas.Left="349" Canvas.Top="251" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="182" Height="174">
             <Machines:V01_SCW_Screw_wHopper.RenderTransform>
@@ -174,14 +161,12 @@
         <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="282-04-MA1" JumpToLabel="060-41-LT1" Canvas.Left="1380" Canvas.Top="642"/>
         <Labels:JumpLabel JumpFromLabel="282-06-MA1" JumpToLabel="232-01-MA1" Canvas.Left="1380" Canvas.Top="492" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="282-01-MA1" JumpToLabel="230-01-MA1" Canvas.Left="1380" Canvas.Top="416" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:JumpLabel JumpFromLabel="236-01-MA1" JumpToLabel="232-01-MA1" Canvas.Left="103" Canvas.Top="61" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:JumpLabel JumpFromLabel="283-01-MA1" JumpToLabel="470-02-MA1" Canvas.Left="561" Canvas.Top="132" Direction="Left" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="283-01-MA1" Canvas.Left="257" Canvas.Top="265"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="282-21-CV1" Canvas.Left="1189" Canvas.Top="219"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="282-04-MA1" Canvas.Left="1189" Canvas.Top="706"/>
         <Labels:DeviceLabel ComponentName="282-06-MA1" Canvas.Left="1189" Canvas.Top="555" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="282-01-MA1" Canvas.Left="1189" Canvas.Top="373" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="236-01-MA1" Canvas.Left="94" Canvas.Top="152" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="286-41-LT1" Canvas.Left="473" Canvas.Top="570"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="286-21-CV2" RenderTransformOrigin="0.5,0.5" Canvas.Left="268" Canvas.Top="584"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="286-01-MA1" Canvas.Left="587" Canvas.Top="499"/>
@@ -189,5 +174,6 @@
         <Labels:DeviceLabel ComponentName="286-MICROFILT" Canvas.Left="365" Canvas.Top="465" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="282-05-MA1" Canvas.Left="965" Canvas.Top="430"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="282-41-LT1" Canvas.Left="966" Canvas.Top="498"/>
+        <Labels:JumpLabel JumpFromLabel="283-01-MA1" JumpToLabel="236-01-MA1" Canvas.Left="322" Canvas.Top="142" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
