--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/Pages/P350.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/Pages/P350.xaml
@@ -9,7 +9,7 @@
              x:Class="Prevu.Synoptics.P350" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
-        <Labels:Pipe Color="Oil" Width="76" RenderTransformOrigin="0.5,0.5" StatusComponent="380-21-CV1" Canvas.Left="1258" Canvas.Top="326" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Color="Water" Width="76" RenderTransformOrigin="0.5,0.5" StatusComponent="380-21-CV1" Canvas.Left="1258" Canvas.Top="326" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="75" StatusComponent="350-01-MA1" PipeHeight="Medium" Canvas.Left="825" Canvas.Top="265" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
