--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/Pages/P230.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/Pages/P230.xaml
@@ -57,7 +57,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="169" RenderTransformOrigin="0.5,0.5" StatusComponent="232-01-MA1" PipeHeight="Medium" Canvas.Left="526" Canvas.Top="620"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="120" RenderTransformOrigin="0.5,0.5" StatusComponent="232-01-MA1" Canvas.Left="376" Canvas.Top="622">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="186" RenderTransformOrigin="0.5,0.5" StatusComponent="232-01-MA1" Canvas.Left="343" Canvas.Top="655">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -68,7 +68,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="242" StatusComponent="282-06-MA1" Canvas.Left="163" Canvas.Top="468"/>
-        <Labels:Pipe Width="274" RenderTransformOrigin="0.5,0.5" StatusComponent="234-01-MA1" PipeHeight="Medium" Canvas.Left="825" Canvas.Top="63" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="278" RenderTransformOrigin="0.5,0.5" StatusComponent="234-01-MA1" PipeHeight="Medium" Canvas.Left="821" Canvas.Top="63" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="66" RenderTransformOrigin="0.5,0.5" StatusComponent="292-01-MA1" Color="Air" Canvas.Left="1016" Canvas.Top="680" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:Pipe Width="101" RenderTransformOrigin="0.5,0.5" StatusComponent="268-21-CV1" Color="Air" Canvas.Left="991" Canvas.Top="190" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="315" RenderTransformOrigin="0.5,0.5" StatusComponent="269-01-MA1" Color="Air" Canvas.Left="1102" Canvas.Top="282" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -154,7 +154,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="566" RenderTransformOrigin="0.5,0.5" StatusComponent="234-01-MA1" PipeHeight="Medium" Canvas.Left="545" Canvas.Top="343" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="566" RenderTransformOrigin="0.5,0.5" StatusComponent="234-01-MA1" PipeHeight="Medium" Canvas.Left="543" Canvas.Top="342" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -191,7 +191,6 @@
         <Machines:Waste Height="46" Width="44"  RenderTransformOrigin="0.5,0.5" Canvas.Left="1215" Canvas.Top="405" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="228-01-MA1" JumpToLabel="170-01-MA1" Canvas.Left="91" Canvas.Top="153" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:JumpLabel JumpFromLabel="232-01-MA1" JumpToLabel="282-06-MA1" Canvas.Left="91" Canvas.Top="436" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:JumpLabel JumpFromLabel="232-01-MA1" JumpToLabel="236-01-MA1" Canvas.Left="391" Canvas.Top="655" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="292-01-MA1" JumpToLabel="320-41-LT1" Canvas.Left="1346" Canvas.Top="648" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="230-01-MA1" JumpToLabel="282-01-MA1" Canvas.Left="91" Canvas.Top="311" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="230-01-MA1" Canvas.Left="365" Canvas.Top="245"/>
@@ -208,5 +207,10 @@
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="232-01-MA1" Canvas.Left="552" Canvas.Top="455"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="230-02-MA1" Canvas.Left="487" Canvas.Top="347"/>
         <Labels:DeviceLabel ComponentName="226-01-EC1" Canvas.Left="117" Canvas.Top="52" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="84" StatusComponent="236-01-MA1" Color="Water" Canvas.Left="474" Canvas.Top="770" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:VRC_WaterCollectingTank Height="78" Width="93" Canvas.Left="390" Canvas.Top="733" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:WaterPump Height="45" Width="45" RenderTransformOrigin="0.5,0.5" Color="Water" BorderBrush="Black" Canvas.Left="414" Canvas.Top="748" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:JumpLabel JumpFromLabel="236-01-MA1" JumpToLabel="283-01-MA1" Canvas.Left="532" Canvas.Top="736" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="236-01-MA1" Canvas.Left="283" Canvas.Top="746" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
