--- a/Prevu.Synoptics.V4228-RES/Pages/P100.xaml
+++ b/Prevu.Synoptics.V4228-RES/Pages/P100.xaml
@@ -77,7 +77,7 @@
     <Labels:Pipe Width="172" StatusComponent="120-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1101" Canvas.Top="520" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="386" Color="Water" StatusComponent="119-01-MA1" Canvas.Left="92" Canvas.Top="670"/>
     <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="417" Color="Water" StatusComponent="113-01-MA1" Canvas.Left="63" Canvas.Top="736"/>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="284" Color="Water" StatusComponent="117-01-MA1" Canvas.Left="628" Canvas.Top="737"/>
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="284" Color="Water" StatusComponent="117-01-MA1" Canvas.Left="628" Canvas.Top="719"/>
     <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="66" StatusComponent="127-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1324" Canvas.Top="639">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
@@ -258,7 +258,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Rectangle HorizontalAlignment="Center" Height="56" Stroke="Black" VerticalAlignment="Top" Width="2" Canvas.Left="910" Canvas.Top="722" RenderTransformOrigin="0.5,0.5"/>
+    <Rectangle HorizontalAlignment="Center" Height="110" Stroke="Black" VerticalAlignment="Top" Width="2" Canvas.Left="910" Canvas.Top="650" RenderTransformOrigin="0.5,0.5"/>
     <Rectangle HorizontalAlignment="Center" Height="28" Stroke="Black" VerticalAlignment="Top" Width="2" Canvas.Left="1083" Canvas.Top="120"/>
     <Machines:WaterPump HorizontalAlignment="Center" VerticalAlignment="Top" Height="45" Width="45" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="261" Canvas.Top="717">
       <Machines:WaterPump.RenderTransform>
@@ -270,7 +270,7 @@
         </TransformGroup>
       </Machines:WaterPump.RenderTransform>
     </Machines:WaterPump>
-    <Machines:WaterPump HorizontalAlignment="Center" VerticalAlignment="Top" Height="44" Width="44" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="772" Canvas.Top="717">
+    <Machines:WaterPump HorizontalAlignment="Center" VerticalAlignment="Top" Height="44" Width="44" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="772" Canvas.Top="699">
       <Machines:WaterPump.RenderTransform>
         <TransformGroup>
           <ScaleTransform ScaleX="-1"/>
@@ -292,12 +292,12 @@
     </Machines:WaterPump>
     <Machines:Waste HorizontalAlignment="Center" VerticalAlignment="Top" Height="46" Width="44" Canvas.Left="1335" Canvas.Top="653"/>
     <Machines:Waste HorizontalAlignment="Center" VerticalAlignment="Top" Height="46" Width="44" Canvas.Left="1323" Canvas.Top="328"/>
-    <Machines:External HorizontalAlignment="Center" VerticalAlignment="Top" Height="62" Width="56" RenderTransformOrigin="0.5,0.5" Canvas.Left="883" Canvas.Top="763">
+    <Machines:External HorizontalAlignment="Center" VerticalAlignment="Top" Height="62" Width="56" RenderTransformOrigin="0.5,0.5" Canvas.Left="883" Canvas.Top="745">
       <Machines:External.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
           <SkewTransform/>
-          <RotateTransform Angle="0"/>
+          <RotateTransform Angle="-179.491"/>
           <TranslateTransform/>
         </TransformGroup>
       </Machines:External.RenderTransform>
@@ -350,8 +350,8 @@
     <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="104-01-MA1" Canvas.Left="566" Canvas.Top="422"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="123-01-MA1" Canvas.Left="1300" Canvas.Top="103"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="113-01-MA1" Canvas.Left="239" Canvas.Top="769"/>
-    <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="117-01-MA1" Canvas.Left="750" Canvas.Top="769"/>
-    <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="117-71-ECS2" Canvas.Left="924" Canvas.Top="714"/>
+    <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="117-01-MA1" Canvas.Left="750" Canvas.Top="751"/>
+    <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="117-71-ECS3" Canvas.Left="941" Canvas.Top="697"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="100-01-MA1" Canvas.Left="750" Canvas.Top="109"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="119-01-MA1" Canvas.Left="164" Canvas.Top="593"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="106-01-MA1" Canvas.Left="809" Canvas.Top="305"/>
@@ -367,6 +367,8 @@
     <Labels:DeviceLabel ComponentName="125-01-MA1" Canvas.Left="1382" Canvas.Top="252" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="110-23-CV1" Canvas.Left="343" Canvas.Top="293" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="110-71-ECS1" Canvas.Left="170" Canvas.Top="353" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:DeviceLabel ComponentName="117-71-ECS2" Canvas.Left="941" Canvas.Top="640" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:DeviceLabel ComponentName="117-71-ECS4" Canvas.Left="941" Canvas.Top="754" HorizontalAlignment="Center" VerticalAlignment="Top"/>
 
   </Canvas>
 </UserControl>
