--- a/Prevu.Synoptics.V4228-RES/Pages/P430.xaml
+++ b/Prevu.Synoptics.V4228-RES/Pages/P430.xaml
@@ -29,7 +29,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="104" Canvas.Top="86" StatusComponent="431-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="702" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Center" VisibilityComponent="431-22-CV1" VisibilitySignal="LS1">
+    <Labels:Pipe Width="96" Canvas.Top="90" StatusComponent="431-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="706" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="431-22-CV1" VisibilitySignal="LS1">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -90,7 +90,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="74" StatusComponent="455-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1195" Canvas.Top="407">
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="74" StatusComponent="455-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1194" Canvas.Top="407">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -141,7 +141,7 @@
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
     <Labels:Pipe Width="49" Canvas.Top="152" StatusComponent="453-01-MA1" Canvas.Left="164" Color="Water" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:Pipe Width="46" VisibilityComponent="433-21-CV1" Canvas.Top="260" StatusComponent="433-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1095" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilitySignal="LS1">
+    <Labels:Pipe Width="46" VisibilityComponent="433-21-CV1" Canvas.Top="260" StatusComponent="433-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1094" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilitySignal="LS1" Height="10">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -162,8 +162,8 @@
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
     <Labels:Pipe Width="95" StatusComponent="456-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1333" Canvas.Top="442" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:Pipe Width="339" VisibilityComponent="433-21-CV1" Canvas.Top="242" StatusComponent="433-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="784" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilitySignal="LS1"/>
-    <Labels:Pipe Width="248" VisibilityComponent="431-22-CV1" Canvas.Top="159" StatusComponent="431-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1006" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilitySignal="LS1">
+    <Labels:Pipe Width="338" VisibilityComponent="433-21-CV1" Canvas.Top="242" StatusComponent="433-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="784" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Center" VisibilitySignal="LS1"/>
+    <Labels:Pipe Width="242" VisibilityComponent="431-22-CV1" Canvas.Top="162" StatusComponent="431-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1010" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilitySignal="LS1">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -173,7 +173,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="382" VisibilityComponent="431-22-CV1" Canvas.Top="39" StatusComponent="431-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="753" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilitySignal="LS1"/>
+    <Labels:Pipe Width="386" VisibilityComponent="431-22-CV1" Canvas.Top="46" StatusComponent="431-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="749" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilitySignal="LS1"/>
     <Labels:Pipe Width="50" StatusComponent="444-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1191" Canvas.Top="596" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:Pipe Width="54" StatusComponent="444-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1212" Canvas.Top="621" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
@@ -288,6 +288,6 @@
     <Labels:DeviceLabel ComponentName="431-01-MA1" Canvas.Left="615" Canvas.Top="49" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     <Labels:DeviceLabel ComponentName="455-MATERIAL" Canvas.Left="869" Canvas.Top="140" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     <Labels:DetailsLabel ComponentName="455-VIEW" DetailsPageName="D455" HideComponentName="True" Canvas.Left="970" Canvas.Top="140" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:DisplayLabel Canvas.Left="869" Canvas.Top="92" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="455-MATERIAL"/>
+    <Labels:DisplayLabel Canvas.Left="869" Canvas.Top="96" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="455-MATERIAL"/>
   </Canvas>
 </UserControl>
