--- a/Prevu.Synoptics.V4228-RES/Pages/P880.xaml
+++ b/Prevu.Synoptics.V4228-RES/Pages/P880.xaml
@@ -255,7 +255,7 @@
     <Labels:JumpLabel 
             JumpFromLabel="880-01-EC1" Canvas.Left="96" Canvas.Top="40" HorizontalAlignment="Center" VerticalAlignment="Top" JumpToLabel="868-01-MA1" />
     <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="880-VIEW" DetailsPageName="D880" HideComponentName="True" Canvas.Left="518" Canvas.Top="188"/>
-    <Labels:DetailsLabel ComponentName="883-BAG" DetailsPageName="D883_2" HideComponentName="True" Canvas.Left="1067" Canvas.Top="259" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:DetailsLabel ComponentName="883-BAG" DetailsPageName="D883" HideComponentName="True" Canvas.Left="1067" Canvas.Top="259" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DetailsLabel ComponentName="997-BAGS" DetailsPageName="D997" Canvas.Left="1285" Canvas.Top="610" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
